# squirreldisk

./: LICENSE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.tsx  DiskDetail.tsx  DiskItem.tsx  DiskList.tsx  FileLine.tsx  ParentFolder.tsx  TitleBar.tsx  d3chart.ts  formatBytes.ts  index.d.ts  main.tsx  pruneData.ts  style.css  window.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/binaries/: pdu-x86_64-apple-darwin  pdu-x86_64-unknown-linux-gnu
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scan.rs  window_style.rs
src/assets/: icon.icns
src/components/: DiskDetail.tsx  DiskItem.tsx  DiskList.tsx  FileLine.tsx  ParentFolder.tsx  TitleBar.tsx
