[package]
name = "squirreldisk-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "macos-private-api", "process-command-api", "updater"] }
sysinfo = "0.27.7"
window-vibrancy = "0.3.2"
window-shadows = { git = "https://github.com/adileo/window-shadows" }
raw-window-handle = "0.5.0"
walkdir = "2"
parallel-disk-usage = "0.8.3"
regex = "1"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.45.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls"
] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
